fix: header btn alignment right

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ ul {
 
 li {
     display: inline-block;
-    margin: 0 calc(var(--base-space) / 2);
+    margin-left: calc(var(--base-space) / 2);
 }
 
 .btn {
